--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,26 @@
 {
-  "semi": false,
-  "tabWidth": 2,
-  "printWidth": 140,
-  "singleQuote": true,
-  "trailingComma": "none",
-  "jsxBracketSameLine": true
+    "singleQuote": true,
+    "jsxSingleQuote": true,
+    "trailingComma": "all",
+    "semi": false,
+    "tabWidth": 4,
+    "printWidth": 130,
+    "endOfLine": "auto",
+    "quoteProps": "as-needed",
+    "overrides": [
+        {
+            "files": "*.json",
+            "options": {
+                "tabWidth": 2,
+                "useTabs": true
+            }
+        },
+        {
+            "files": "*.yml,*.yaml",
+            "options": {
+                "tabWidth": 2,
+                "useTabs": true
+            }
+        }
+    ]
 }
