--- a/package.json
+++ b/package.json
@@ -1,73 +1,74 @@
 {
-  "name": "process-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "eslint": "eslint --fix .",
-    "prettier:fix": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
-  },
-  "dependencies": {
-    "@ant-design/icons": "^4.8.0",
-    "@moonshot-team/saga-toolkit": "^0.2.12",
-    "@types/moment": "^2.13.0",
-    "@types/node": "18.11.18",
-    "@types/pdfmake": "^0.2.1",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "connected-next-router": "^4.0.1",
-    "antd": "^4.22.2",
-    "axios": "^0.27.2",
-    "babel-plugin-import": "^1.13.5",
-    "dayjs": "^1.11.7",
-    "eslint": "8.31.0",
-    "eslint-config-next": "13.1.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "js-cookie": "^3.0.1",
-    "less": "^4.1.3",
-    "moment": "^2.29.4",
-    "moment-timezone": "^0.5.34",
-    "next": "13.1.1",
-    "next-plugin-antd-less": "^1.8.0",
-    "pdfmake": "^0.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "ramda": "^0.27.1",
-    "react-redux": "^7.2.4",
-    "@reduxjs/toolkit": "^1.5.1",
-    "redux-devtools-extension": "^2.13.9",
-    "react-nextjs-toast": "^1.2.5",
-    "react-select": "^3.2.0",
-    "react-select-animated": "^1.3.2",
-    "react-toastify": "^9.0.8",
-    "styled-components": "^5.3.5",
-    "redux-saga": "^1.1.3",
-    "redux-wait-for-action": "^0.0.8",
-    "typescript": "4.9.4"
-  },
-  "devDependencies": {
-    "@types/js-cookie": "^3.0.2",
-    "@types/node": "^18.6.2",
-    "@types/ramda": "^0.27.44",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "18.0.6",
-    "@types/styled-components": "^5.1.25",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "eslint": "^8.20.0",
-    "eslint-config-next": "12.2.3",
-    "gulp": "^4.0.2",
-    "pdfmake-font-generator": "^1.0.1",
-    "prettier": "^2.7.1",
-    "redux-devtools-extension": "^2.13.9",
-    "typescript": "^4.7.4"
-  }
+	"name": "process-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"eslint": "eslint . --ext .js,.jsx,.tsx,.ts",
+		"eslint:fix": "eslint --fix .",
+		"prettier:fix": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+	},
+	"dependencies": {
+		"@ant-design/icons": "^4.8.0",
+		"@moonshot-team/saga-toolkit": "^0.2.12",
+		"@types/moment": "^2.13.0",
+		"@types/node": "18.11.18",
+		"@types/pdfmake": "^0.2.1",
+		"@types/react": "18.0.26",
+		"@types/react-dom": "18.0.10",
+		"@typescript-eslint/eslint-plugin": "^5.31.0",
+		"@typescript-eslint/parser": "^5.31.0",
+		"connected-next-router": "^4.0.1",
+		"antd": "^4.22.2",
+		"axios": "^0.27.2",
+		"babel-plugin-import": "^1.13.5",
+		"dayjs": "^1.11.7",
+		"eslint": "8.31.0",
+		"eslint-config-next": "13.1.1",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-jsx-a11y": "^6.6.1",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-react": "^7.30.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"js-cookie": "^3.0.1",
+		"less": "^4.1.3",
+		"moment": "^2.29.4",
+		"moment-timezone": "^0.5.34",
+		"next": "13.1.1",
+		"next-plugin-antd-less": "^1.8.0",
+		"pdfmake": "^0.2.5",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"ramda": "^0.27.1",
+		"react-redux": "^7.2.4",
+		"@reduxjs/toolkit": "^1.5.1",
+		"redux-devtools-extension": "^2.13.9",
+		"react-nextjs-toast": "^1.2.5",
+		"react-select": "^3.2.0",
+		"react-select-animated": "^1.3.2",
+		"react-toastify": "^9.0.8",
+		"styled-components": "^5.3.5",
+		"redux-saga": "^1.1.3",
+		"redux-wait-for-action": "^0.0.8",
+		"typescript": "4.9.4"
+	},
+	"devDependencies": {
+		"@types/js-cookie": "^3.0.2",
+		"@types/node": "^18.6.2",
+		"@types/ramda": "^0.27.44",
+		"@types/react": "^18.0.15",
+		"@types/react-dom": "18.0.6",
+		"@types/styled-components": "^5.1.25",
+		"@typescript-eslint/eslint-plugin": "^5.48.0",
+		"eslint": "^8.20.0",
+		"eslint-config-next": "12.2.3",
+		"gulp": "^4.0.2",
+		"pdfmake-font-generator": "^1.0.1",
+		"prettier": "^2.7.1",
+		"redux-devtools-extension": "^2.13.9",
+		"typescript": "^4.7.4"
+	}
 }
