--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@ant-design/icons": "^4.8.0",
 		"@moonshot-team/saga-toolkit": "^0.2.12",
+		"@reduxjs/toolkit": "^1.5.1",
 		"@types/moment": "^2.13.0",
 		"@types/node": "18.11.18",
 		"@types/pdfmake": "^0.2.1",
@@ -21,10 +22,10 @@
 		"@types/react-dom": "18.0.10",
 		"@typescript-eslint/eslint-plugin": "^5.31.0",
 		"@typescript-eslint/parser": "^5.31.0",
-		"connected-next-router": "^4.0.1",
 		"antd": "^4.22.2",
 		"axios": "^0.27.2",
 		"babel-plugin-import": "^1.13.5",
+		"connected-next-router": "^4.0.1",
 		"dayjs": "^1.11.7",
 		"eslint": "8.31.0",
 		"eslint-config-next": "13.1.1",
@@ -35,24 +36,25 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"js-cookie": "^3.0.1",
 		"less": "^4.1.3",
+		"lottie-web": "^5.10.2",
 		"moment": "^2.29.4",
 		"moment-timezone": "^0.5.34",
 		"next": "13.1.1",
 		"next-plugin-antd-less": "^1.8.0",
 		"pdfmake": "^0.2.5",
+		"ramda": "^0.27.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"ramda": "^0.27.1",
-		"react-redux": "^7.2.4",
-		"@reduxjs/toolkit": "^1.5.1",
-		"redux-devtools-extension": "^2.13.9",
+		"react-lottie": "^1.2.3",
 		"react-nextjs-toast": "^1.2.5",
+		"react-redux": "^7.2.4",
 		"react-select": "^3.2.0",
 		"react-select-animated": "^1.3.2",
 		"react-toastify": "^9.0.8",
-		"styled-components": "^5.3.5",
+		"redux-devtools-extension": "^2.13.9",
 		"redux-saga": "^1.1.3",
 		"redux-wait-for-action": "^0.0.8",
+		"styled-components": "^5.3.5",
 		"typescript": "4.9.4"
 	},
 	"devDependencies": {
