--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@
 /.next/
 /out/
 
-# production
-/build
+# # production
+# /build
 
 # misc
 .DS_Store
@@ -25,8 +25,8 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# local env files
-.env
+# # local env files
+# .env
 
 # vercel
 .vercel
