--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_HOST=http://178.128.53.58:1337/api
+NEXT_PUBLIC_HOST=https://www.jawerp.app/api
 NEXT_PUBLIC_NAME_PLATFORM=JAW MANAGEMENT
 NEXT_PUBLIC_MODULES=JAW_MANAGEMENT
