--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"@types/react-dom": "18.0.6",
 		"@types/styled-components": "^5.1.25",
 		"@typescript-eslint/eslint-plugin": "^5.48.0",
+		"antd-colorpicker": "^1.0.0",
 		"eslint": "^8.20.0",
 		"eslint-config-next": "12.2.3",
 		"gulp": "^4.0.2",
