--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-NEXT_PUBLIC_HOST=https://www.jawerp.app/api
+NEXT_PUBLIC_HOST=http://localhost:1337/api
 NEXT_PUBLIC_NAME_PLATFORM=JAW MANAGEMENT
 NEXT_PUBLIC_MODULES=JAW_MANAGEMENT
+
+NEXT_PUBLIC_HOST_PROD=https://www.jawerp.app/api
+NEXT_PUBLIC_NAME_PLATFORM_PROD=JAW MANAGEMENT
+NEXT_PUBLIC_MODULES_PROD=JAW_MANAGEMENT
