--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
 		"redux-saga": "^1.1.3",
 		"redux-wait-for-action": "^0.0.8",
 		"styled-components": "^5.3.5",
-		"typescript": "4.9.4"
+		"typescript": "4.9.4",
+		"xlsx": "^0.18.5"
 	},
 	"devDependencies": {
 		"@types/js-cookie": "^3.0.2",
