--- a/.env
+++ b/.env
@@ -1,7 +1,12 @@
-NEXT_PUBLIC_HOST=http://localhost:1337/api
+NEXT_PUBLIC_HOST=http://127.0.0.1:1337/api
 NEXT_PUBLIC_NAME_PLATFORM=JAW MANAGEMENT
 NEXT_PUBLIC_MODULES=JAW_MANAGEMENT
+NEXT_PUBLIC_LABS=http://127.0.0.1:8000/api
 
 NEXT_PUBLIC_HOST_PROD=https://www.jawerp.app/api
 NEXT_PUBLIC_NAME_PLATFORM_PROD=JAW MANAGEMENT
 NEXT_PUBLIC_MODULES_PROD=JAW_MANAGEMENT
+NEXT_PUBLIC_LABS_PROD=http://128.199.228.63/api
+
+
+# http://128.199.228.63/dashboard
