--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@ant-design/icons": "^4.8.0",
 		"@moonshot-team/saga-toolkit": "^0.2.12",
 		"@reduxjs/toolkit": "^1.5.1",
+		"@types/file-saver": "^2.0.7",
 		"@types/moment": "^2.13.0",
 		"@types/node": "18.11.18",
 		"@types/pdfmake": "^0.2.1",
@@ -34,6 +35,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.30.1",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"file-saver": "^2.0.5",
 		"js-cookie": "^3.0.1",
 		"less": "^4.1.3",
 		"lottie-web": "^5.10.2",
@@ -54,6 +56,7 @@
 		"redux-devtools-extension": "^2.13.9",
 		"redux-saga": "^1.1.3",
 		"redux-wait-for-action": "^0.0.8",
+		"sheetjs-style": "^0.15.8",
 		"styled-components": "^5.3.5",
 		"typescript": "4.9.4",
 		"xlsx": "^0.18.5"
